# rails_cross_detector

./: .gitignore  CMakeLists.txt  README.md  main.cpp  res.txt
hough_detector/: hough_algo.cpp  hough_algo.h
max_min_res/: 30_11_res.txt  30_13_res.txt  30_15_res.txt  30_17_res.txt  30_19_res.txt  35_11_res.txt  35_13_res.txt  35_9_res.txt  40_11_res.txt  40_13_res.txt  40_17_res.txt  40_9_res.txt  45_15_res.txt  45_19_res.txt
max_min_top_results/: 45_9_res.txt
results_30_7_with_horizontal_Package10_40/: img0000.txt  img0002.txt  img0003.txt  img0004.txt  img0005.txt  img0006.txt  img0008.txt  img0009.txt  img0012.txt  img0016.txt  img0017.txt  img0018.txt  img0019.txt  img0020.txt  img0021.txt  img0022.txt  img0023.txt  img0024.txt  img0025.txt  img0026.txt  img0027.txt  img0028.txt  img0029.txt  img0030.txt  img0031.txt  img0032.txt  img0033.txt  img0034.txt  img0036.txt  img0037.txt  img0038.txt  img0039.txt  img0040.txt  img0041.txt  img0042.txt  img0043.txt  img0044.txt  img0045.txt  img0046.txt  img0047.txt  (+167 more)
results_40_11/: img0000.txt  img0002.txt  img0003.txt  img0004.txt  img0005.txt  img0006.txt  img0008.txt  img0009.txt  img0012.txt  img0016.txt  img0017.txt  img0018.txt  img0019.txt  img0020.txt  img0021.txt  img0023.txt  img0024.txt  img0025.txt  img0026.txt  img0027.txt  img0028.txt  img0029.txt  img0030.txt  img0031.txt  img0032.txt  img0033.txt  img0034.txt  img0036.txt  img0037.txt  img0038.txt  img0039.txt  img0040.txt  img0041.txt  img0042.txt  img0043.txt  img0044.txt  img0045.txt  img0046.txt  img0047.txt  img0048.txt  (+163 more)
utils/: cv_supp.cpp  (+5 more)
(+808 files in other folders)
